# solana-development

./: .gitignore  README.md
1. Ethereum/: READMe.md
1. Ethereum/0. Basic/: 1. Transaction.md  2. Layer.md
1. Ethereum/1. Solidity/: README.md
1. Ethereum/2. Categories/: 3. Trading.md  4. Yield.md  5. Lending.md  6. Stable.md  7. Bonding.md  8. Tokenomics.md  9. Optimism.md
1. Ethereum/3. Other/: 0xAPI.md  Account Abstrac tion.md  Bitmaps.md  Security.md  TheGraph.md
1. Ethereum/4. Platforms/: CVEX.md  Impermax.md  Plutus.md  RSK.md
2. Solana/knowledge/: 1.Account Model.md  6.SPL Token.md  7.Intro to Solana Onchain Development.md  8.PDA.md
3. Cosmos/: Keeper.md  Module.md  Proto.md
cosmos/: Hook.md  Message.md
escrow/: Cargo.toml  README.md
escrow/doc/: structure.md  theory.md
escrow/escrow-ui/: package-lock.json
escrow/program/: Cargo.toml  README.md
escrow/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  proessor.rs  state.rs
ethereum/: README.md
ethereum/Deep Knowledge/: AMA.md  All.md  CVEX.md  Impermax.md  Moonbeam.md  Other.md
ethereum/Defi/: AMM.md  Bonding.md  IDIOMS.md  Tokenomics.md  Trading.md  Trading2.md  Yield.md
evm-to-svm/: 1.Account_Model.md  2.Fees_and_Tx.md  3.Contract_Development.md  4.Example.md
helloWorld/: package-lock.json  package.json
rust/: 2primitive.rs  3customTypes.rs
rust/day1/: answer.rs  formattedPrint.rs
rust/day2(Primitive)/: ArraysAndSlices.rs  BasicPrimitives.rs  LiteralsAndOperators.rs
rust/tests/: day2-test.rs  (+1 more)
solana/: README.md
solana/solana/helloWorld/src/program-rust/: Cargo.toml
(+84 files in other folders)
