
[package]
name = "solana-basic"
version = "1.0.0"
description = "basic solana program written in Rust"
authors = ["commonlot"]
repository = "https://github.com/phanlancer/solana-basic"
license = "Apache-2.0"
homepage = "https://phanlancerduk.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
